PyMaker/datas/object2/RawHTML/i10801/Python_DOC_referPages.questions-on-use-ginput-and-print-the-results-with-python.txt
<div class="post-text" itemprop="text">
<p>I would like to use <code>ginput</code> function in python to get two points from the figure and get the closest int value and save the array. The code is shown below:</p>
<pre><code>from __future__ import print_function
from pylab import plot, ginput, show, axis

import matplotlib.pyplot as plt
import numpy as np
t = np.arange(10)
plt.plot(t, np.sin(t))
print("Please click")
x = ginput(2)
x=np.ceil(x)
**print (x)**
plt.show()
</code></pre>
<p>When I run the code and print the x with brackets, the output is:</p>
<pre><code>Please click
[[ 2.  1.]
 [ 8. -0.]]
</code></pre>
<p>However, if I run the code and print <code>x</code> without the brackets, </p>
<pre><code>from __future__ import print_function
from pylab import plot, ginput, show, axis

import matplotlib.pyplot as plt
import numpy as np
t = np.arange(10)
plt.plot(t, np.sin(t))
print("Please click")
x = ginput(2)
x=np.ceil(x)
**print x**
plt.show()
</code></pre>
<p>the output shows error:</p>
<pre><code> File "&lt;ipython-input-27-1d992b01e790&gt;", line 1
    print x
          ^
SyntaxError: invalid syntax
</code></pre>
<p>I am really confused about this. What is the reason of this?</p>
</div>
<div class="post-text" itemprop="text">
<p>In Python 3, <a href="https://docs.python.org/3/library/functions.html#print" rel="nofollow">print()</a> is a function, therefore it requires parentheses around its input argument like any other function.</p>
</div>
